--- a/RegAdm/RegAdm/Views/MainMenuView.xaml
+++ b/RegAdm/RegAdm/Views/MainMenuView.xaml
@@ -4,10 +4,26 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:local="clr-namespace:RegAdm.Views"
+             xmlns:vms="clr-namespace:RegAdmViewModels;assembly=RegAdmViewModels"
+             xmlns:vs="clr-namespace:RegAdm.Views"
              mc:Ignorable="d"
              d:DesignHeight="450"
              d:DesignWidth="800"
              d:Background="White">
+    <UserControl.Resources>
+        <DataTemplate DataType="{x:Type vms:RoomsViewModel}">
+            <vs:RoomsView />
+        </DataTemplate>
+        <DataTemplate DataType="{x:Type vms:UsersViewModel}">
+            <vs:UsersView />
+        </DataTemplate>
+        <DataTemplate DataType="{x:Type vms:ClientsViewModel}">
+            <vs:ClientsView />
+        </DataTemplate>
+        <DataTemplate DataType="{x:Type vms:ReservationsViewModel}">
+            <vs:ReservationsView />
+        </DataTemplate>
+    </UserControl.Resources>
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto" />
