Добавлены разные файлы

--- a/RegAdm/RegAdm/MainWindow.xaml
+++ b/RegAdm/RegAdm/MainWindow.xaml
@@ -18,8 +18,6 @@
             <vs:AuthorizationView />
         </DataTemplate>
 
-        <DataTemplate x:Key="menu">
-            <vs:MainMenuView />
-        </DataTemplate>
+        <vs:MainMenuView x:Key="menu" x:Shared="False"/>
     </Window.Resources>
 </Window>
