--- a/RegAdm/RegAdm/App.xaml
+++ b/RegAdm/RegAdm/App.xaml
@@ -18,6 +18,12 @@
             <Setter Property="Padding"
                     Value="3 1 3 2" />
         </Style>
-        
+
+        <Style TargetType="TextBlock" x:Key="titleStyle">
+            <Setter Property="FontStyle"
+                    Value="Italic" />
+            <Setter Property="FontSize"
+                    Value="23" />
+        </Style>
     </Application.Resources>
 </Application>
