--- a/RegAdm/RegAdm/App.xaml
+++ b/RegAdm/RegAdm/App.xaml
@@ -4,8 +4,8 @@
              xmlns:local="clr-namespace:RegAdm"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
-        <local:Locator x:Key="locator"/>
-        
+        <local:Locator x:Key="locator" />
+
         <Style TargetType="Control"
                x:Key="ctrlStyle">
             <Setter Property="FontSize"
@@ -19,11 +19,107 @@
                     Value="3 1 3 2" />
         </Style>
 
-        <Style TargetType="TextBlock" x:Key="titleStyle">
+        <Style TargetType="TextBlock"
+               x:Key="titleStyle">
             <Setter Property="FontStyle"
                     Value="Italic" />
             <Setter Property="FontSize"
                     Value="23" />
         </Style>
+
+        <Style TargetType="ListBox">
+            <Setter Property="ScrollViewer.CanContentScroll"
+                    Value="False" />
+            <Setter Property="SelectionMode"
+                    Value="Single" />
+            <Setter Property="HorizontalContentAlignment"
+                    Value="Stretch" />
+            <Setter Property="ItemContainerStyle">
+                <Setter.Value>
+                    <Style TargetType="ListBoxItem">
+                        <Setter Property="Padding"
+                                Value="0" />
+                    </Style>
+                </Setter.Value>
+            </Setter>
+        </Style>
+
+        <Style TargetType="DataGrid">
+            <Setter Property="AutoGenerateColumns"
+                    Value="False" />
+            <Setter Property="IsReadOnly"
+                    Value="True" />
+            <Setter Property="CanUserAddRows"
+                    Value="False" />
+            <Setter Property="CanUserDeleteRows"
+                    Value="False" />
+            <Setter Property="CanUserResizeRows"
+                    Value="False" />
+            <Setter Property="CanUserResizeColumns"
+                    Value="False" />
+            <Setter Property="CanUserSortColumns"
+                    Value="False" />
+                <Setter Property="HeadersVisibility"
+                        Value="Column" />
+                <Setter Property="SelectionMode"
+                        Value="Single" />
+                <Setter Property="ColumnHeaderStyle">
+                    <Setter.Value>
+                        <Style TargetType="DataGridColumnHeader">
+                            <Setter Property="HorizontalContentAlignment"
+                                    Value="Center" />
+                        </Style>
+                    </Setter.Value>
+                </Setter>
+        </Style>
+
+        <Style TargetType="ComboBox">
+            <Setter Property="IsEditable"
+                    Value="True"/>
+            <Setter Property="FontSize"
+                    Value="15" />
+            <Setter Property="Validation.ErrorTemplate"
+                    Value="{x:Null}" />
+        </Style>
+
+        <Style TargetType="TextBox">
+            <Setter Property="Validation.ErrorTemplate"
+                    Value="{x:Null}" />
+        </Style>
+
+        <Style TargetType="DatePicker">
+            <Setter Property="FontSize"
+                    Value="15" />
+            <Setter Property="Validation.ErrorTemplate"
+                    Value="{x:Null}" />
+        </Style>
+
+        <Style TargetType="TextBlock" x:Key="labelText">
+            <Setter Property="Margin"
+                    Value="0 7" />
+            <Setter Property="Foreground"
+                    Value="DarkSlateBlue" />
+
+            <Setter Property="TextDecorations"
+                    Value="Underline" />
+        </Style>
+
+        <Style TargetType="ContentControl"
+               x:Key="errorContent">
+            <Setter Property="ContentTemplate">
+                <Setter.Value>
+                    <DataTemplate>
+                        <StackPanel>
+                            <ContentPresenter Content="{Binding}" />
+                            <ItemsControl FontSize="15"
+                                          Foreground="Red"
+                                          DisplayMemberPath="ErrorContent"
+                                          ItemsSource="{Binding (Validation.Errors)}" />
+                        </StackPanel>
+                    </DataTemplate>
+                </Setter.Value>
+            </Setter>
+        </Style>
+        
     </Application.Resources>
 </Application>
